# brave-core

./: .eslintrc.json  package-lock.json  package.json
browser/: brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client_browsertest.cc  brave_profile_prefs.cc  browser_context_keyed_service_factories.cc  default_protocol_handler_utils_win.cc  default_protocol_handler_utils_win.h  sources.gni
browser/brave_federated_learning/: brave_federated_learning_service_factory.cc  brave_federated_learning_service_factory.h  sources.gni
browser/brave_wallet/: BUILD.gn  brave_wallet_provider_delegate_impl.cc  brave_wallet_tab_helper.cc  brave_wallet_tab_helper.h  brave_wallet_tab_helper_browsertest.cc  send_transaction_browsertest.cc  trezor_bridge_controller_factory.cc
browser/extensions/api/: brave_shields_api.cc
browser/farbling/: BUILD.gn  brave_navigator_keyboard_api_browsertest.cc
browser/net/: brave_site_hacks_network_delegate_helper_unittest.cc
browser/profiles/: brave_profile_manager.cc
browser/skus/: BUILD.gn
browser/ui/: BUILD.gn  wallet_bubble_manager_delegate_impl.cc
browser/ui/webui/: brave_adblock_ui.cc  brave_untrusted_web_ui_controller_factory.cc  brave_untrusted_web_ui_controller_factory.h  brave_web_ui_controller_factory.cc
common/: webui_url_constants.cc  webui_url_constants.h
components/brave_federated_learning/: BUILD.gn  brave_federated_learning_service.cc  brave_federated_learning_service.h  brave_federated_learning_service_impl.cc  brave_federated_learning_service_impl.h
components/definitions/: rewards.d.ts
components/resources/: brave_components_resources.grd  brave_components_strings.grd  wallet_strings.grdp
components/skus/browser/: BUILD.gn  skus_sdk_context.cc  skus_sdk_fetcher.cc  skus_sdk_fetcher.h  skus_sdk_service.h
components/skus/browser/rust/cxx/: BUILD.gn
components/trezor_bridge/: BUILD.gn  DEPS  trezor_bridge_handler.cc  trezor_bridge_handler.h  trezor_bridge_page_handler.cc
patches/: chrome-VERSION.patch
test/: BUILD.gn
(+123 files in other folders)
