# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//build/config/features.gni")

static_library("browser") {
  public_deps = [
    "rust/cxx"
  ]

  sources = [
    "pref_names.h",
    "skus_sdk_context.cc",
    "skus_sdk_context.h",
    "skus_sdk_fetcher.cc",
    "skus_sdk_fetcher.h",
    "skus_sdk_service.cc",
    "skus_sdk_service.h",
    "skus_utils.cc",
    "skus_utils.h",
    "switches.h",
  ]

  deps = [
    "//base",
    "//brave/components/skus/common:mojom",
    "//components/keyed_service/core",
    "//components/pref_registry",
    "//components/prefs",
    "//net",
    "//services/network/public/cpp",
    "//services/preferences/public/cpp",
    "//url",
  ]
}
